updated to version 5.1, see the changelog