@@ -20,61 +20,67 @@
  **/
 package com.mechalikh.pureedgesim.datacentersmanager;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
+import java.util.List;
 
-import org.jgrapht.GraphPath;
-
-import com.mechalikh.pureedgesim.network.NetworkLink;
 import com.mechalikh.pureedgesim.scenariomanager.SimulationParameters;
 import com.mechalikh.pureedgesim.simulationengine.Event;
 import com.mechalikh.pureedgesim.simulationmanager.SimulationManager;
-import com.mechalikh.pureedgesim.tasksgenerator.Task;
+import com.mechalikh.pureedgesim.taskgenerator.Task;
 
+/**
+ * This computing node class used by the simulator by default. PureEdgeSim's
+ * users can extend it and use their custom class (@see
+ * com.mechalikh.pureedgesim.simulationmanager.SimulationAbstract#setCustomComputingNode(Class))
+ * 
+ * 
+ * @author Charafeddine Mechalikh
+ * @since PureEdgeSim 5.0
+ */
 public class DefaultComputingNode extends LocationAwareNode {
 	protected int applicationType;
 	protected boolean isSensor = false;
-	protected double availableStorage = 0;
-	protected double Storage = 0;
+	protected double availableStorage = 0; // in Megabytes
+	protected double storage = 0; // in Megabytes
 	protected boolean isIdle = true;
-	protected double tasks = 0;
-	protected double totalTasks = 0;
+	protected int tasks = 0;
+	protected int totalTasks = 0;
 	protected double totalMipsCapacity;
 	protected double mipsPerCore;
-	protected double numberOfCPUCores;
-	protected double availableCores;
-	protected LinkedList<Task> tasksQueue = new LinkedList<>();
+	protected int numberOfCPUCores;
+	protected int availableCores;
+	protected List<Task> tasksQueue = new ArrayList<>();
+	protected double availableRam; // in Megabytes
+	protected double ram; // in Megabytes
 	protected static final int EXECUTION_FINISHED = 2;
 
-	public DefaultComputingNode(SimulationManager simulationManager, double mipsPerCore, long numberOfCPUCores,
-			long storage) {
+	public DefaultComputingNode(SimulationManager simulationManager, double mipsPerCore, int numberOfCPUCores,
+			double storage, double ram) {
 		super(simulationManager);
-		this.setStorage(storage);
-		this.setAvailableStorage(storage);
-		this.setTotalMipsCapacity(mipsPerCore * numberOfCPUCores);
+		setStorage(storage);
+		setAvailableStorage(storage);
+		setTotalMipsCapacity(mipsPerCore * numberOfCPUCores);
 		this.mipsPerCore = mipsPerCore;
-		this.setNumberOfCPUCores(numberOfCPUCores);
-		availableCores = numberOfCPUCores;
+		setRam(ram);
+		setAvailableRam(ram);
+		setNumberOfCPUCores(numberOfCPUCores);
+		this.availableCores = numberOfCPUCores;
 		if (mipsPerCore <= 0 || numberOfCPUCores <= 0 || storage <= 0)
 			this.setAsSensor(true);
 	}
 
 	@Override
 	public void processEvent(Event e) {
-		switch (e.getTag()) {
-		case EXECUTION_FINISHED:
+		super.processEvent(e);
+		if (e.getTag() == EXECUTION_FINISHED)
 			executionFinished(e);
-			break;
-		default:
-			super.processEvent(e);
-			break;
-		}
 	}
 
 	public double getNumberOfCPUCores() {
 		return numberOfCPUCores;
 	}
 
-	public void setNumberOfCPUCores(double numberOfCPUCores) {
+	public void setNumberOfCPUCores(int numberOfCPUCores) {
 		this.numberOfCPUCores = numberOfCPUCores;
 	}
 
@@ -90,21 +96,24 @@ public class DefaultComputingNode extends LocationAwareNode {
 		return availableStorage;
 	}
 
-	public void setAvailableStorage(double availableStorage) {
-		this.availableStorage = availableStorage;
+	public void setAvailableStorage(double d) {
+		this.availableStorage = d;
 	}
 
 	public double getAvgCpuUtilization() {
 		if (this.getTotalMipsCapacity() == 0)
 			return 0;
-		double utilization = totalTasks / (getTotalMipsCapacity() * simulationManager.getSimulation().clock());
-		return utilization > 1 ? 100 : utilization * 100;
+		Double utilization = (totalTasks * 100.0)
+				/ (getTotalMipsCapacity() * simulationManager.getSimulation().clock());
+
+		return Math.min(100, utilization);
 	}
 
 	public double getCurrentCpuUtilization() {
 		if (this.getTotalMipsCapacity() == 0)
 			return 0;
-		return tasks / getTotalMipsCapacity() > 1 ? 100 : tasks * 100 / getTotalMipsCapacity();
+		Double utilization = tasks * 100.0 / getTotalMipsCapacity();
+		return utilization > 100 ? 100 : utilization;
 	}
 
 	public boolean isIdle() {
@@ -135,16 +144,16 @@ public class DefaultComputingNode extends LocationAwareNode {
 		this.isSensor = isSensor;
 	}
 
-	public LinkedList<Task> getTasksQueue() {
+	public List<Task> getTasksQueue() {
 		return tasksQueue;
 	}
 
 	public double getTotalStorage() {
-		return Storage;
+		return storage;
 	}
 
 	public void setStorage(double storage) {
-		Storage = storage;
+		this.storage = storage;
 	}
 
 	public double getTotalMipsCapacity() {
@@ -155,15 +164,70 @@ public class DefaultComputingNode extends LocationAwareNode {
 		this.totalMipsCapacity = totalMipsCapacity;
 	}
 
+	/**
+	 * Gets the total amount of RAM (in Megabytes) that this computing node has.
+	 * 
+	 * @return the total amount of RAM.
+	 * 
+	 * @see #getAvailableRam()
+	 * @see #setAvailableRam(long)
+	 * @see #setRam(long)
+	 */
+	public double getRamCapacity() {
+		return this.ram;
+	}
+
+	/**
+	 * Gets the amount of RAM (in Megabytes) that is available on this computing
+	 * node.
+	 * 
+	 * @return the amount of available RAM.
+	 * 
+	 * @see #getRamCapacity()
+	 * @see #setAvailableRam(long)
+	 * @see #setRam(long)
+	 */
+	public double getAvailableRam() {
+		return this.availableRam;
+	}
+
+	/**
+	 * Sets the total amount of RAM (in Megabytes) that this computing node has.
+	 * 
+	 * @param ram the total RAM on this computing node.
+	 * 
+	 * @see #getAvailableRam()
+	 * @see #setAvailableRam(long)
+	 * @see #getRamCapacity()
+	 */
+	public void setRam(double ram) {
+		this.ram = ram;
+	}
+
+	/**
+	 * Sets the amount of RAM (in Megabytes) that is available on this computing
+	 * node.
+	 * 
+	 * @param ram the available RAM.
+	 * 
+	 * @see #getAvailableRam()
+	 * @see #getRamCapacity()
+	 * @see #setRam(long)
+	 */
+	public void setAvailableRam(double ram) {
+		this.availableRam = ram;
+	}
+
 	@Override
 	public void submitTask(Task task) {
-
 		// The task to be executed has been received, save the arrival time
-		task.setArrivalTime(getSimulator().clock());
+		task.setArrivalTime(getSimulation().clock());
 
-		// If a CPU core is available, execute task directly
-		if (availableCores > 0) {
+		// Update the amount of available storage
+		this.setAvailableStorage(this.availableStorage - task.getContainerSizeInMBytes());
 
+		// If a CPU core and enough RAM are available, execute task directly
+		if (availableCores > 0 && this.getAvailableRam() > task.getContainerSizeInMBytes()) {
 			startExecution(task);
 		}
 		// Otherwise, add it to the execution queue
@@ -171,12 +235,17 @@ public class DefaultComputingNode extends LocationAwareNode {
 			getTasksQueue().add(task);
 	}
 
-	private void startExecution(Task task) {
-		// Update the CPU utilization
+	protected void startExecution(Task task) {
+
+		// Update the CPU utilization.
 		addCpuUtilization(task);
+		// Update the amount of RAM.
+		setAvailableRam(this.getAvailableRam() - task.getContainerSizeInMBytes());
+		// Update the number of available cores.
 		availableCores--;
-		task.setExecutionStartTime(getSimulator().clock());
-		
+		// Record when the execution has started.
+		task.setExecutionStartTime(getSimulation().clock());
+
 		/*
 		 * Arguably, the correct way to get energy consumption measurement is to place
 		 * the following line of code within the processEvent(Event e) method of the
@@ -184,34 +253,38 @@ public class DefaultComputingNode extends LocationAwareNode {
 		 * 
 		 * getEnergyModel().updateCpuEnergyConsumption(getCurrentCpuUtilization());
 		 * 
-		 * I mean, this makes sense right?. The problem with this is that it will
-		 * depend on the update interval. To get more accurate results, you need to
-		 * set the update interval as low as possible, this will in turn  increase the
-		 * simulation duration, which is clearly not convenient. One way around it, is
-		 * to make the measurement here, when the task is being executed. 
-		 * The problem with this is that if we don't receive a task, the static energy consumption will not be measured.
-		 * So the best approach is to measure the dynamic one here, and add the static one there.
+		 * I mean, this makes sense right?. The problem with this is that it will depend
+		 * on the update interval. To get more accurate results, you need to set the
+		 * update interval as low as possible, this will in turn increase the simulation
+		 * duration, which is clearly not convenient. One way around it, is to make the
+		 * measurement here, when the task is being executed. The problem with this is
+		 * that if we don't receive a task, the static energy consumption will not be
+		 * measured. So the best approach is to measure the dynamic one here, and add
+		 * the static one there.
 		 */
+		getEnergyModel().updateDynamicEnergyConsumption(task.getLength(), this.getTotalMipsCapacity());
 
-		getEnergyModel().updateDynamicEnergyConsumption(task.getLength(),this.getMipsCapacity());
-
-		schedule(this, ((double) task.getLength() / mipsPerCore), EXECUTION_FINISHED, task);
+		// Schedule when the execution will be finished.
+		schedule(this, (task.getLength() / mipsPerCore), EXECUTION_FINISHED, task);
 	}
 
-	public double getMipsCapacity() {
+	public double getMipsPerCore() {
 		return mipsPerCore;
 	}
 
-	private void executionFinished(Event e) {
+	protected void executionFinished(Event e) {
 
 		// The execution of one task has been finished, free one more CPU core.
 		availableCores++;
-
+		// Free the RAM that has been used by the finished task.
+		setAvailableRam(this.getAvailableRam() + ((Task) e.getData()).getContainerSizeInMBytes());
+		// Free the storage that has been used by the finished task.
+		setAvailableStorage(this.getAvailableStorage() + ((Task) e.getData()).getContainerSizeInMBytes());
 		// Update CPU utilization.
 		removeCpuUtilization((Task) e.getData());
 
 		// Save the execution end time for later use.
-		((Task) e.getData()).setExecutionEndTime(this.getSimulator().clock());
+		((Task) e.getData()).setExecutionFinishTime(this.getSimulation().clock());
 
 		// Notify the simulation manager that a task has been finished, and it's time to
 		// return the execution results.
@@ -221,40 +294,26 @@ public class DefaultComputingNode extends LocationAwareNode {
 		if (!getTasksQueue().isEmpty()) {
 
 			// Execute the first task in the queue on the available core.
-			Task task = getTasksQueue().getFirst();
+			Task task = getTasksQueue().get(0);
 
 			// Remove the task from the queue.
-			getTasksQueue().removeFirst();
+			getTasksQueue().remove(0);
 
-			// Save the execution start time.
-			task.setExecutionStartTime(this.getSimulator().clock());
-
-			// Reserve a CPU core for this task.
-			availableCores--;
-
-			// Start execution.
-			schedule(this, (task.getLength() / mipsPerCore), EXECUTION_FINISHED, task);
+			// Execute the task.
+			startExecution(task);
 		}
-
 	}
 
 	@Override
 	public void setApplicationPlacementLocation(ComputingNode node) {
 		this.applicationPlacementLocation = node;
 		this.isApplicationPlaced = true;
-		if (this != node) {
-			if (node.getType() == SimulationParameters.TYPES.EDGE_DEVICE) {
-				simulationManager.getDataCentersManager().getTopology().removeLink(currentDeviceToDeviceWifiLink);
-				currentDeviceToDeviceWifiLink.setDst(node);
-				simulationManager.getDataCentersManager().getTopology().addLink(currentDeviceToDeviceWifiLink);
-			}
-
-			GraphPath<ComputingNode, NetworkLink> path = simulationManager.getDataCentersManager().getTopology()
-					.getPath(this, node);
-
-			vertexList.addAll(path.getVertexList());
-			edgeList.addAll(path.getEdgeList());
+		if ((node.getType() == SimulationParameters.TYPES.EDGE_DEVICE) && (this != node)) {
+			simulationManager.getDataCentersManager().getTopology().removeLink(currentDeviceToDeviceWifiLink);
+			currentDeviceToDeviceWifiLink.setDst(node);
+			simulationManager.getDataCentersManager().getTopology().addLink(currentDeviceToDeviceWifiLink);
 		}
+
 	}
 
 }
